<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_plugin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/satu"
        android:textSize="20sp"
        android:textColor="@color/ungu"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_plugin"
        android:textSize="20sp"
        android:textColor="@color/ungu"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<ImageView
    android:id="@+id/img_pluginn"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/elllaaa"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/tv_plugin"
    android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/pink"
        android:layout_below="@+id/img_pluginn"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/squad_plugin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:entries="@array/squad_plugin"


 />

</RelativeLayout>